# Refactoring

./: .gitignore
task_1/: CMakeLists.txt
task_1/lib/: shape.cpp  shape.h  shape.hpp  transform.cpp  transform.hpp
task_1/src/: main.cxx
